# bpe-qwen

./: .gitignore  Cargo.toml  README.md  SWEEP.md  benchmark.py  benchmark_pretokenization.py  build_wheels.sh  check_module.py  check_rust_module.py  debug_contractions.py  debug_crlf.py  debug_detailed.py  debug_emoji.py  debug_numbers.py  debug_pretokenization.py  debug_space_verbose.py  debug_verbose.py  fair_parallel_benchmark_20250826_195517.json  parallel_benchmark_20250826_194418.json  profile_performance.py  pyproject.toml  test_crlf.rs  test_hf_patch.py  test_hf_regex.py  test_regex.py  test_simple.py  wikitext_benchmark_20250826_163159.json  wikitext_benchmark_20250826_163240.json  wikitext_benchmark_20250826_164421.json  wikitext_benchmark_20250826_164725.json  wikitext_benchmark_20250826_165217.json  wikitext_benchmark_20250826_165628.json  wikitext_benchmark_20250826_165725.json  wikitext_benchmark_20250826_165726.json  wikitext_benchmark_20250826_165814.json  wikitext_benchmark_20250826_170339.json  wikitext_benchmark_20250826_170437.json  wikitext_benchmark_20250826_170736.json  wikitext_benchmark_20250826_170821.json  wikitext_benchmark_20250826_171100.json  (+8 more)
bpe_qwen/: __init__.py  hf_patch.py
python/bpe_qwen/: __init__.py  __init__.pyi  auto_linear_tokenizer.py  hf_patch.py
python/tests/: test_all.py
src/: lib.rs  pretokenization.rs  pretokenization_automata.rs  pretokenization_indices.rs  simple_tokenizer.rs
tests/: benchmark_automata.py  benchmark_batch.py  benchmark_indices.py  benchmark_parallel_batch.py  benchmark_parallel_fair.py  benchmark_pretokenization.py  benchmark_wikitext.py  test_rust_regex.py  test_verbose_context.py  test_verbose_issue.py  test_verify_results.py
tests/regression/: test_auto_linear_tokenizer.py  test_pretokenization.py  test_pretokenization_indices.py  test_pretokenization_multilang_code.py  test_special_tokens.py
tests/scripts/: pretokenize_sft_test.py  process_sft_data.py  process_sft_data_full_tokenization.py  regex_sft_test.py  tokenize_sft_test.py
