[package]
name = "bpe-qwen"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bpe_qwen"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
serde_json = "1.0"
regex = "1.11"
fancy-regex = "0.13"
unicode-normalization = "0.1"
rayon = "1.10"
ctor = "0.2"
unicode-general-category = "0.6"

# Use the local bpe crate from vendor
bpe = { path = "vendor/rust-gems/crates/bpe", features = ["tiktoken", "rand"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug-assertions = false
panic = "abort"
