[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "bpe-qwen"
description = "A blazing-fast BPE tokenizer for Qwen models, built with Rust. Achieves 6x faster tokenization with parallelism compared to HuggingFace tokenizers."
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
dev = [
    "transformers",
    "datasets",
    "huggingface-hub",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
